[package]
name = "qed"
version = "0.0.1"
authors = ["Ryan Lopopolo <rjl@hyperbo.la>"]
license = "MIT"
edition = "2021"
readme = "README.md"
repository = "https://github.com/artichoke/qed"
documentation = "https://docs.rs/qed"
homepage = "https://github.com/artichoke/qed"
description = "Compile-time assertions"
keywords = ["assert", "const", "no_std", "static"]
categories = ["no-std", "rust-patterns"]
include = ["src/**/*", "tests/**/*", "LICENSE", "README.md"]

[dependencies]

[dev-dependencies]

# Check that crate versions are properly updated in documentation and code when
# bumping the version.
[dev-dependencies.version-sync]
version = "0.9.3"
default-features = false
features = ["markdown_deps_updated", "html_root_url_updated"]

[package.metadata.docs.rs]
# This sets the default target to `x86_64-unknown-linux-gnu` and only builds
# that target. `qed` has the same API and code on all targets.
default-target = "x86_64-unknown-linux-gnu"
targets = []
rustdoc-args = ["--cfg", "docsrs"]
